--- a/dev/styles/_header.block.scss
+++ b/dev/styles/_header.block.scss
@@ -3,6 +3,7 @@
 
 	position: absolute;
 	top: 0;
+	z-index: 1001;
 	width: 100%;
 	height: $height;
 	background: $color-black-02;
